test/fixtures/syntaxerrors/missingtype.lys.ast.desugar
|-Document(0,10)
  |-VarDirective(0,10)
    |-VarDeclaration(0,10)
      |-NameIdentifier(4,5)
        |-Identifier=x
      |-<SyntaxError>=A type or effect was expected
      |-NumberLiteral=1
  |-EndOfFile=